tests/rosetta/out/Clojure/15-puzzle-solver.clj
; Generated by Mochi compiler v0.10.26 on 1970-01-01T00:00:00Z
(ns main)

(defn -main []
  (println ((:FifteenPuzzleExample testpkg) ))
)

(-main)
